--- a/.github/workflows/publish-and-deploy.yml
+++ b/.github/workflows/publish-and-deploy.yml
@@ -3,17 +3,17 @@ name: Publish and Deploy App
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - "v[0-9]+.[0-9]+.[0-9]+"
   workflow_dispatch:
 
 jobs:
-  deploy:
+  publish_and_deploy:
     permissions:
       contents: write
     name: Publish and Deploy App
     runs-on: ubuntu-latest
     steps:
-      - uses: tiago-freire/vtex-publish-deploy-action@v3
+      - uses: cubos-vtex/vtex-publish-deploy-action@v15
         with:
           appKey: ${{ secrets.VTEX_TOOLBELT_KEY }}
           appToken: ${{ secrets.VTEX_TOOLBELT_TOKEN }}
