feat: detects multiple delivery packages; correctly applies saved carts with multiple delivery options

--- a/react/package.json
+++ b/react/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.32.5",
+    "@types/react-dom": "^19.2.2",
     "@vtex/order-items": "^0.7.0",
     "apollo-client": "^2.6.8",
     "react": "^16.12.0",
@@ -22,7 +23,6 @@
     "@vtex/tsconfig": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.5",
     "graphql": "^14.6.0",
-    "ssesandbox04.checkout-b2b": "http://ssesandbox04.vtexassets.com/_v/public/typings/v1/ssesandbox04.checkout-b2b@1.0.64/public/@types/ssesandbox04.checkout-b2b",
     "ssesandbox04.file-manager": "http://ssesandbox04.vtexassets.com/_v/public/typings/v1/ssesandbox04.file-manager@0.7.7/public/@types/ssesandbox04.file-manager",
     "typescript": "3.9.7",
     "vtex.address-form": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.address-form@4.27.0/public/@types/vtex.address-form",
